# call-me-f

./: .gitignore  CMakeLists.txt  README.md
lab1/: var5_fork.c  var5_fork_edited.c
lab2/: lab  var23_thread.c
lab2/lab2_edited/: line.cnf  sts_queue.c  var23_thread.c
lab3/: CMakeLists.txt  client.c  helpers.c  helpers.h  server.c  tests.c  write_request.c  write_request.h
lab3/lab3_comment_rus/: client.c  helpers.c  helpers.h  server.c
lab4/: CMakeLists.txt  MPI_Fedoruk_example.c  main.c  new_main.c
lab5/: femdb_fill.sql  main.php
lab6/от старших курсов/6/4+ буква2цифра1/: Cell.idl  StationServer.java  Tube.java
lab6/от старших курсов/Lab2 (JAVA + CORBA)/: Java и CORBA.htm  Java после C-C++.htm
lab6/от старших курсов/Lab2 (JAVA + CORBA)/MISC/CORBAv7/Lab6DataBase/: _project.xml
lab6/от старших курсов/Lab2 (JAVA + CORBA)/MISC/Projects_java_6/v6r/: Cell.idl~  Lorem.txt~  StationServer.java~  StationServer2.java~  Tube.java~  Tube1.java~  Tube2.java~  lab_1_12.c~
lab6/от старших курсов/Lab2 (JAVA + CORBA)/MISC/a/: Cell.idl  StationServer.java  TubeDim.java  TubeKolia.java  TubePetr.java  TubeVladimir.java
lab6/от старших курсов/Lab2 (JAVA + CORBA)/MISC/b/: StationServer.java  Tube.java  Tube1.java  TubeAndrey.java  TubeIrina.java  TubeMarianna.java  TubeVitalik.java
lab6/от старших курсов/Lab2 (JAVA + CORBA)/serverPart(v4)/: StationServer.java
lab6/от старших курсов/Lab2 (JAVA + CORBA)/v3/: Cell.idl  StationServer.java  Tube.java
lab6/передача многострочных сообщений + вывод цены за сообщение /: Tube.java
(+60 files in other folders)
